    The Thermal Series of mods, Tool's Complement, and XNet.
  Added Energy Diagnostics block.
    Attaches to an Energy Network and displays the energy variables of all machines
      on the Energy Network.
    - Only supports a maximum of 16 machines right now.
  The Circuit Fabricator now supports additional recipes than just the circuit items.
CHANGED:
  Increased the chance to drop an Unidentified Ring when killing enemy mobs.
  The Dimensional Anchor is now registered as a Curios Charm, if you
    have the Curios mod installed.
  The Energized Power Core and Nullified Power Core are now crafted using the
    Circuit Fabricator from ADDSynth Energy.
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.



v1.4.2 - June 15, 2022
NEW:
  Added an alternate crafting recipe for the Inverter.
  Added Project E EMC values to Silicon and the Circuit items.
  The drawn ItemStacks in the Portal Control Panel gui now cycle between all
    valid Gem Blocks that can be accepted in the Portal Frames, and also show
    an Item tooltip if you mouse over them, just like the drawn ItemStacks in
    the Circuit Fabricator gui.
  Added Issue Tracker to the mods.toml file.
CHANGED:
  The Fusion Core is now crafted with Blaze Powder instead of Fire Charges.
  Power Cycle time (Portal Control Panel & Crystal Matter Generator) is now
    drawn with the status message instead of using the work percentage.
  Removed Crafting Table as a trigger for the Circuit Fabricator recipe advancement
    so players don't unlock the recipe so early in the game.
FIXED:
  Fixed es_es.json language files.