@@ -5,13 +5,15 @@ import net.minecraftforge.common.ForgeConfigSpec;
 
 public final class Values {
 
-  public static ForgeConfigSpec.DoubleValue unknown_dimension_tree_spawn_chance;
-
-  private static final float DEFAULT_UNKNOWN_TREE_SPAWN_CHANCE = 0.0005f; // 1 / 2000
-
   private static final Pair<Values, ForgeConfigSpec> SPEC_PAIR = new ForgeConfigSpec.Builder().configure(Values::new);
   public static final Values INSTANCE = SPEC_PAIR.getLeft();
   public static final ForgeConfigSpec CONFIG_SPEC = SPEC_PAIR.getRight();
+
+  private static final int DEFAULT_PORTAL_SPAWN_TIME = 40;
+  private static final float DEFAULT_UNKNOWN_TREE_SPAWN_CHANCE = 0.0005f; // 1 / 2000
+
+  public static ForgeConfigSpec.IntValue portal_spawn_time;
+  public static ForgeConfigSpec.DoubleValue unknown_dimension_tree_spawn_chance;
 
   public Values(final ForgeConfigSpec.Builder builder){
 
@@ -20,7 +22,9 @@ public final class Values {
     // float value, chance that ANYTHING will drop
     // all 4 ring weight values
     // all 5 armor weight values
-  
+    
+    portal_spawn_time = builder.defineInRange("Portal Spawn Time (in seconds)", DEFAULT_PORTAL_SPAWN_TIME, 5, 3600);
+    
     // Spawn chance of Unknown Trees in the weird dimension.
     builder.push("Other Values");
     unknown_dimension_tree_spawn_chance = builder.comment(
